btnSelect fix e wrap testo bottoni

--- a/web/style/mobile.css
+++ b/web/style/mobile.css
@@ -38,6 +38,11 @@ a{
     display: inline-block;
 }
 
+button, input[type="submit"]{
+    white-space: normal;
+    word-wrap: break-word;
+}
+
 /* 
 ----------------
     BREADCRUMB 
